Ensured the a tags for the slideshow buttons on the main index.html page go behind the nav bar when scrolling up, using z-index of 2 for the header.

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ header {
   position: fixed;
   top: 0px;
   width: 100%;
+  z-index: 2;
 }
 
 nav {
@@ -112,7 +113,7 @@ main {
   height: 500px;
 }
 
-.slideshow > a {
+.slideshow > div > a {
   display: inline-flex;
   width: 1.5rem;
   height: 1.5rem;
